@@ -80,6 +80,7 @@ o ignore setsid() failure, because there is only one possible and
 o fix harmless error condition
 o add buffer_destroy() to buffer.c
 o fix memory leaks in several error output paths
+o use size_t for buffer sizes
 
 version 0.9.5 (2007/07/29)
 ------------------------------
